tests/errors/delocal-wrong-name.ja
procedure main()
    local int foo = 0
    local int bar = 0
    skip
    delocal int foo = 0
    delocal int bar = 0
